--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>极曜动力机械设备有限公司 - 全球自动化工业解决方案</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/process.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -73,30 +74,60 @@
     <section class="services-preview">
         <div class="container">
             <h2 class="section-title">主营业务</h2>
+            <p class="section-subtitle">保持现有内容风格不变，在此基础上把业务分类讲清楚，方便客户快速定位需求。</p>
             <div class="services-grid">
                 <div class="service-card">
-                    <i class="fas fa-robot"></i>
-                    <h3>工业机器人</h3>
-                    <p>各类工业机器人及配套设备</p>
+                    <i class="fas fa-cubes"></i>
+                    <h3>设备供应</h3>
+                    <p>工业自动化设备与核心部件选型、配套与供货</p>
                     <a href="services.html" class="learn-more">了解更多 <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="service-card">
-                    <i class="fas fa-microchip"></i>
-                    <h3>PLC & 控制系统</h3>
-                    <p>西门子、三菱等品牌PLC及配件</p>
+                    <i class="fas fa-diagram-project"></i>
+                    <h3>系统集成</h3>
+                    <p>产线改造、控制系统集成与现场交付支持</p>
                     <a href="services.html" class="learn-more">了解更多 <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="service-card">
-                    <i class="fas fa-tools"></i>
-                    <h3>自动化配件</h3>
-                    <p>传感器、电机、减速机等全系列</p>
+                    <i class="fas fa-screwdriver-wrench"></i>
+                    <h3>备件耗材</h3>
+                    <p>常用备件、易损件与标准件供应，缩短停线时间</p>
                     <a href="services.html" class="learn-more">了解更多 <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="service-card">
-                    <i class="fas fa-boxes"></i>
-                    <h3>产线设备</h3>
-                    <p>自动化生产线设计与配套设备</p>
-                    <a href="services.html" class="learn-more">了解更多 <i class="fas fa-arrow-right"></i></a>
+                    <i class="fas fa-headset"></i>
+                    <h3>售后维护</h3>
+                    <p>技术支持、远程协助与维护服务，保障稳定运行</p>
+                    <a href="contact.html" class="learn-more">立即咨询 <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 合作流程（新增版面，不改原结构） -->
+    <section class="process">
+        <div class="container">
+            <h2 class="section-title">合作流程</h2>
+            <div class="process-steps">
+                <div class="process-step">
+                    <span class="step-number">01</span>
+                    <h3>需求沟通</h3>
+                    <p>了解现场工况、目标与预算，快速明确方向</p>
+                </div>
+                <div class="process-step">
+                    <span class="step-number">02</span>
+                    <h3>方案与报价</h3>
+                    <p>提供选型建议、交付周期与清晰报价明细</p>
+                </div>
+                <div class="process-step">
+                    <span class="step-number">03</span>
+                    <h3>交付实施</h3>
+                    <p>供货/集成/调试配合，确保落地效果</p>
+                </div>
+                <div class="process-step">
+                    <span class="step-number">04</span>
+                    <h3>售后支持</h3>
+                    <p>远程响应 + 备件保障，持续稳定运行</p>
                 </div>
             </div>
         </div>
