SEO optimization: add meta tags, keywords, sitemap, robots.txt
- Added comprehensive meta tags (description, keywords, og tags) to all pages
- Created robots.txt with sitemap reference
- Created sitemap.xml for search engine indexing
- Updated copyright year to 2025
- Added ICP备案号占位符
- Fixed section subtitle text
- Added canonical URLs

--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>关于我们 - 极曜动力机械设备有限公司</title>
+    <title>关于极曜动力 - 专业工业自动化设备供应商 | 厦门</title>
+    <meta name="description" content="极曜动力机械设备有限公司，总部位于福建厦门，专注工业自动化领域，服务全球500+企业，覆盖50+国家，提供专业的自动化解决方案。">
+    <meta name="keywords" content="极曜动力,关于我们,厦门自动化公司,工业自动化供应商,企业简介">
+    <link rel="canonical" href="https://jiyaodongli.com/about.html">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
