--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>联系我们 - 极曜动力机械设备有限公司</title>
+    <title>联系我们 - 获取工业自动化报价与咨询 | 极曜动力</title>
+    <meta name="description" content="联系极曜动力获取工业自动化设备报价、技术咨询与售后支持。电话：+86 133-7507-7753，邮箱：kanye330@gmail.com，地址：福建厦门">
+    <meta name="keywords" content="联系极曜动力,工业自动化报价,技术咨询,厦门自动化,设备询价">
+    <link rel="canonical" href="https://jiyaodongli.com/contact.html">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
