--- a/services.html
+++ b/services.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>服务 - 极曜动力机械设备有限公司</title>
+    <title>服务项目 - 工业自动化设备供应与系统集成 | 极曜动力</title>
+    <meta name="description" content="极曜动力提供工业自动化设备供应、系统集成、备件耗材、售后维护等专业服务，涵盖PLC、变频器、伺服系统、传感器等全品类产品。">
+    <meta name="keywords" content="工业自动化服务,设备供应,系统集成,PLC编程,变频器维修,伺服电机,传感器,备件供应">
+    <link rel="canonical" href="https://jiyaodongli.com/services.html">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
