--- a/index.html
+++ b/index.html
@@ -98,25 +98,33 @@
             <p class="section-subtitle">一站式工业自动化服务，从设备供应到售后维护全流程覆盖</p>
             <div class="services-grid">
                 <div class="service-card">
-                    <i class="fas fa-cubes"></i>
+                    <div class="card-image">
+                        <img src="images/card-equipment.jpg" alt="设备供应">
+                    </div>
                     <h3>设备供应</h3>
                     <p>工业自动化设备与核心部件选型、配套与供货</p>
                     <a href="services.html" class="learn-more">了解更多 <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="service-card">
-                    <i class="fas fa-diagram-project"></i>
+                    <div class="card-image">
+                        <img src="images/card-integration.jpg" alt="系统集成">
+                    </div>
                     <h3>系统集成</h3>
                     <p>产线改造、控制系统集成与现场交付支持</p>
                     <a href="services.html" class="learn-more">了解更多 <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="service-card">
-                    <i class="fas fa-screwdriver-wrench"></i>
+                    <div class="card-image">
+                        <img src="images/card-parts.jpg" alt="备件耗材">
+                    </div>
                     <h3>备件耗材</h3>
                     <p>常用备件、易损件与标准件供应，缩短停线时间</p>
                     <a href="services.html" class="learn-more">了解更多 <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="service-card">
-                    <i class="fas fa-headset"></i>
+                    <div class="card-image">
+                        <img src="images/card-support.jpg" alt="售后维护">
+                    </div>
                     <h3>售后维护</h3>
                     <p>技术支持、远程协助与维护服务，保障稳定运行</p>
                     <a href="contact.html" class="learn-more">立即咨询 <i class="fas fa-arrow-right"></i></a>
